src/test/julian/Parsing/SyntaxError/prog_4.jul
import ModuleSys.SynB;

MyClass mc = new MyClass();